# google-drive-upload-pipeline

./: .gitignore  README.md  pyproject.toml  requirements.txt
diff/: .env.example  config.py  diff_service.py  drive_client.py  logger.py  scheduler.py  server.py
upload/: .env.example  google_drive.py
